--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,7 +11,7 @@
 header{
     background-color: #f2f2f2;
     color: #fff;
-    position: fixed;
+    position: relative;
     top:0;
     left: 0;
     width: 100%;
@@ -73,7 +73,7 @@ a {
 /*BODY*/
 body{  
 
-    padding-top: 90px;
+    padding-top: 0px;
 
  }
 
@@ -86,6 +86,7 @@ main {
     align-content: space-between;
     margin-left: 0px;
     display: inline-block;
+    padding-top: 90px; /*Espacio entre nav bar,header y main*/
 }
 
 #bannerInicio{
