--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,60 +1,86 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <script src="https://kit.fontawesome.com/870c30ac6e.js" crossorigin="anonymous"></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-    <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
-    <title>Grupo Fono Bus</title>
+        <script src="https://kit.fontawesome.com/870c30ac6e.js" crossorigin="anonymous"></script>
+            
+        <link rel="shortcut icon" href="./static/img/favicon.ico" type="image/x-icon">
+        <title>Grupo Fono Bus</title>
+        
+        <link rel="stylesheet" href="/static/css/styles.css">
+        <link rel="stylesheet" href="/static/css/crud-movies.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+        <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     
-    <link rel="stylesheet" href="/static/css/styles.css">
-    <link rel="stylesheet" href="/static/css/crud-movies.css">
-
-    <script type="text/javascript" src="/static/js/inicio.js"></script>
-
-</head>
+        <script type="text/javascript" src="/static/js/inicio.js"></script>
+        <script type="text/javascript" src="/static/js/bootstrap.bundle.min.js"></script>
+    </head>
 <body>
     <header class="header">
-        <!-- <div class="navbar"></div> -->
-        <nav>
-            <!-- logo -->
-            <div id="logo">
-                <a href="/">
-                    <img src="/static/img/logo-fonobus-1.png" alt="Fono Bus">
+
+        <nav class="navbar navbar-expand-md navbar-white bg-white" aria-label="Fourth navbar example">
+            <div class="container-fluid">
+    
+                <div id="logo"></div>
+                
+                <a class="navbar-brand" href="/">
+                <img src="/static/img/logo-fonobus-1.png" alt="Fono Bus">
                 </a>
-            </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
         
-            <!-- Hipervinculos para el menu -->
-            <ul class="nav-links">
-              
-                <li>
-                    <a href="/templates/acerca.html">
-                        <i class="fa-solid fa-user"></i>
-                        <span>Nosotros</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/templates/pasajes.html">
-                        <i class="fa-solid fa-bus"></i>
-                        <span>Pasajes</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/templates/contacto.html">
-                        <i class="fa fa-fw fa-envelope"></i>
-                        <span>Contacto</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/templates/crud-abono.html">
-                        <i class="fa-solid fa-address-card"></i>
-                        <span>Abono</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+                <div class="collapse navbar-collapse" id="navbarsExample04">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./templates/acerca.html">
+                        <i class="fa-solid fa-user"></i>Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="/templates/pasajes.html">
+                        <i class="fa-solid fa-bus"></i>Pasajes</a>
+                    </li>
+            
+                    <li class="nav-item">
+                        <a class="nav-link" href="/templates/contacto.html">
+                            <i class="fa fa-fw fa-envelope"></i>Contacto</a>
+                    </li>
+    
+                    <li class="nav-item">
+                        <a class="nav-link" href="/templates/crud-abono.html">
+                            <i class="fa-solid fa-address-card"></i>Abono</a>
+                    </li>
+    
+                   <!-- <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    </li> -->
+                    <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/templates/acerca.html">
+                            <i class="fa-solid fa-user"></i>Nosotros</a>
+                        </li>                                         
+                        <li><a class="dropdown-item" href="/templates/pasajes.html">
+                            <i class="fa-solid fa-bus"></i>Pasajes</a>
+                        </li>
+                        <li><a class="dropdown-item" href="/templates/contacto.html">
+                            <i class="fa fa-fw fa-envelope"></i>Contacto</a>
+                        </li>
+                        <li><a class="dropdown-item" href="/templates/crud-abono.html">
+                            <i class="fa-solid fa-address-card"></i>Abono</a>
+                        </li>                  
+                    </ul>
+                    </li>
+                </ul>
+                <form role="search">
+                    <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                </form>
+                </div>
+            </div>
+            </nav>
+    
     </header>
 
 <main class="mainContacto">
