--- a/templates/pasajes.html
+++ b/templates/pasajes.html
@@ -60,16 +60,16 @@
                     <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="./templates/acerca.html">
+                        <li><a class="dropdown-item" href="/templates/acerca.html">
                             <i class="fa-solid fa-user"></i>Nosotros</a>
                         </li>                                         
-                        <li><a class="dropdown-item" href="./templates/pasajes.html">
+                        <li><a class="dropdown-item" href="/templates/pasajes.html">
                             <i class="fa-solid fa-bus"></i>Pasajes</a>
                         </li>
-                        <li><a class="dropdown-item" href="./templates/contacto.html">
+                        <li><a class="dropdown-item" href="/templates/contacto.html">
                             <i class="fa fa-fw fa-envelope"></i>Contacto</a>
                         </li>
-                        <li><a class="dropdown-item" href="./templates/crud-abono.html">
+                        <li><a class="dropdown-item" href="/templates/crud-abono.html">
                             <i class="fa-solid fa-address-card"></i>Abono</a>
                         </li>                  
                     </ul>
