Cambios en el menu nosotros

--- a/templates/pasajes.html
+++ b/templates/pasajes.html
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="navbarsExample04">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./templates/acerca.html">
+                    <a class="nav-link active" aria-current="page" href="/templates/acerca.html">
                         <i class="fa-solid fa-user"></i>Nosotros</a>
                     </li>
                     <li class="nav-item">
