--- a/templates/crud-abono.html
+++ b/templates/crud-abono.html
@@ -6,7 +6,7 @@
         
         <script src="https://kit.fontawesome.com/870c30ac6e.js" crossorigin="anonymous"></script>
             
-        <link rel="shortcut icon" href="./static/img/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
         <title>Grupo Fono Bus</title>
         
         <link rel="stylesheet" href="/static/css/styles.css">
@@ -35,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarsExample04">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./templates/acerca.html">
+                    <a class="nav-link active" aria-current="page" href="/templates/acerca.html">
                         <i class="fa-solid fa-user"></i>Nosotros</a>
                     </li>
                     <li class="nav-item">
